--- a/CH5/pandas_intro.ipynb
+++ b/CH5/pandas_intro.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6c152ff2",
+   "execution_count": 2,
+   "id": "942d5b09",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import pandas as pd"
    ]
   }
  ],
@@ -18,7 +18,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.7"
   }
  },
